new locations added 7/13

--- a/map creator-Copy1.ipynb
+++ b/map creator-Copy1.ipynb
@@ -85,7 +85,7 @@
     "    long_list.append(long)\n",
     "    add_list.append(geo)\n",
     "    \n",
-    "    \n",
+    "#break up large lines\n",
     "    \n",
     "for (columnName, columnData) in response_df.iteritems():\n",
     "    for row in range(len(columnData)):\n",
@@ -95,14 +95,11 @@
     "        for char in cell:\n",
     "            if count >= 50 and char == ' ':\n",
     "                newstring = cell[:overall_count] + '<br>' + cell[overall_count:]\n",
-    "                print(newstring)\n",
     "                response_df.at[row, columnName] = newstring\n",
     "                cell = newstring\n",
     "                count = 0\n",
     "            count +=1\n",
     "            overall_count += 1\n",
-    "            \n",
-    "print(response_df) \n",
     "    \n",
     "response_df['Latitude'] = lat_list\n",
     "response_df['Longitude'] = long_list\n",
