--- a/map update 6-8-22.ipynb
+++ b/map update 6-8-22.ipynb
@@ -6531,7 +6531,7 @@
     "import googlemaps\n",
     "from datetime import datetime\n",
     "\n",
-    "gmaps = googlemaps.Client(key='AIzaSyCoqZWdbwPh0WLoaoIHMaKaT6LsaiyLe8s')\n",
+    "gmaps = googlemaps.Client(key='')\n",
     "\n",
     "result = gmaps.find_place('18 4th Ave, West Haven CT 06516', 'textquery')\n",
     "\n",
